--- a/gb/20/11/16/n12552984.md
+++ b/gb/20/11/16/n12552984.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ysiuba3973/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ysiuba3973/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ysiuba3973/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ysiuba3973/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ysiuba3973/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ysiuba3973/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ysiuba3973/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ysiuba3973/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>苗县教师增能工作坊 活化素养阅读教学力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/469543-600x400.jpg" />
 <h6>苗县教师增能工作坊， 活化素养阅读教学力。（苗县府提供）
 </h6>
 <hr>
-<p>【大纪元2020年11月16日讯】（大纪元记者陈文敏台湾苗栗报导）为提升教师阅读教学能力，县府开办<ahref="https://github.com/ysiuba3973/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB%E7%B4%A0%E5%85%BB.md#1">阅读素养</a>教学增能工作坊，邀请专家分享阅读素养的教学策略；11月16日县长徐耀昌出席开幕式，期勉教育伙伴一起增进课程设计力，落实108课纲核心素养，逐步提升学生学习兴趣及阅读理解能力。</p>
-<p>苗栗县<ahref="https://github.com/ysiuba3973/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB%E7%B4%A0%E5%85%BB.md#1">阅读素养</a>教学增能工作坊上午在县府国际会议厅开幕，县内图书教师及所属学校校长、18乡镇市图书馆馆长、承办人约150人参加，县长徐耀昌、教育处长邱廷岳都到场，鼓励教育伙伴藉增能课程充电，提升苗县教育品质。</p>
+<p>【大纪元2020年11月16日讯】（大纪元记者陈文敏台湾苗栗报导）为提升教师阅读教学能力，县府开办<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB%E7%B4%A0%E5%85%BB.md#1">阅读素养</a>教学增能工作坊，邀请专家分享阅读素养的教学策略；11月16日县长徐耀昌出席开幕式，期勉教育伙伴一起增进课程设计力，落实108课纲核心素养，逐步提升学生学习兴趣及阅读理解能力。</p>
+<p>苗栗县<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%85%E8%AF%BB%E7%B4%A0%E5%85%BB.md#1">阅读素养</a>教学增能工作坊上午在县府国际会议厅开幕，县内图书教师及所属学校校长、18乡镇市图书馆馆长、承办人约150人参加，县长徐耀昌、教育处长邱廷岳都到场，鼓励教育伙伴藉增能课程充电，提升苗县教育品质。</p>
 <p>工作坊特别聘请善于阅读素养导向教学的林明进、叶惠贞2位老师进行专题讲座，分享素养课程设计心法，包括写作技巧、阅读理解等，并与校长、教师交流分享经验心得，希望透过实作与讨论，将创新教学拓居到更多教育现场，让多学子受惠。</p>
 <p>县长徐耀昌表示，108课纲上路后，教师是否能以素养导向取代传统教育模式是教改成败的关键，期望工作坊增进教师教学专业知能，教导孩子经由写作引发创意及与人沟通、互动能力，进而达到课纲“自发、互动、共好”三大面向，让孩子成为“终身学习者”。</p>
 <p>县长徐耀昌强调，苗县深耕阅读教育，近4年来争取教育部补助8千多万元经费，改善31所国中小图书馆阅读空间，并办理多项多元阅读教育推广活动，今年全国性阅读竞赛最高荣誉“磐石奖”，苗县获奖数在22县市排名第6名，成果优异，苗县营造“幸福书香山城苗栗”愿景已逐步达成。</p>
@@ -19,48 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/19/8/30/n11488188.md#1">宜兰县三星国中“爱的书库”揭牌</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/19/9/18/n11529455.md#1">宜县第十座“静思书轩” 揭牌启用</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/4/1/n11994850.md#1">远距教学暨账号捐赠弱势生 儿童节最温馨礼物</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/8/5/n12308487.md#1">阅读磐石学校及推手奖 2020年嘉市三校奖项入袋</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/10/13/n12472845.md#1">元太振曜乐天捐赠电子书 打造行动图书馆</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/16/n12552949.md#1">苗县高龄失智友善社区成果发表会</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12550752.md#1">曾文忠老师油画个展—竹南蛇窑的永世情怀</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12550541.md#1">铜锣杭菊芋头节浪漫登场</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12546189.md#1">艺术与公益、发扬真善美 狮子会包场看神韵</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12546862.md#1">竹市警办理座谈 双向沟通让外籍人士安心在台</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/30/n11488188.md#1">宜兰县三星国中“爱的书库”揭牌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/18/n11529455.md#1">宜县第十座“静思书轩” 揭牌启用</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/1/n11994850.md#1">远距教学暨账号捐赠弱势生 儿童节最温馨礼物</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/5/n12308487.md#1">阅读磐石学校及推手奖 2020年嘉市三校奖项入袋</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/13/n12472845.md#1">元太振曜乐天捐赠电子书 打造行动图书馆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680722.md#1">工研院携手致茂办量测论文竞赛 培育技术人才</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680584.md#1">苗栗春祭暨遥祭黄陵联合祭典</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680574.md#1">事迹受肯定 大千三位医事人员获优秀青年表扬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678598.md#1">力积电董事长黄崇仁获颁阳明交大名誉博士</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678494.md#1">玩积木也能学程式 神奇的KIBO机器猫亲子共学</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/27/n9996650.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/11/n12540543.md#1">拜登宣布当选总统 圣经专家：川普仍会胜出</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/10/n12537654.md#1">张爱玲和弟弟 一个最悲凉的手足亲情的故事</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/9/n12535003.md#1">【命理】八字解盘 拜登能入主白宫吗？</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12551495.md#1">【薇羽看世间】美大选舞弊 惊人“多猫腻”</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/14/n12548791.md#1">【拍案惊奇】白宫推定川普连任 起底计票系统</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12551030.md#1">【大陆新闻解毒 】时事小品：造假的败登</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/14/n12549021.md#1">【大选更新11·14】川普支持者遭袭受伤</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12548081.md#1">川普宣布国家进入紧急状态 应对中共威胁</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/14/n12548711.md#1">美议员爆料 外企Scytl有偷换选票全部证据</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12548015.md#1">刘德华新片励志感人 亲笔信秀一手好字</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12548178.md#1">自曝坐网约车喝到剩水 张馨予直呼难受又后怕</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12547700.md#1">黄耀明演唱会忆中环感慨落泪 吁港人勿收声</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/14/n12549435.md#1">潘嘉丽嫁作台湾媳释婚照 下周20日台北宴客</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/15/n12550309.md#1">日本警犬找人却半路开溜 警方还得派人找它</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12547495.md#1">吃对健脑防失智！7种食物让大脑变年轻</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12548179.md#1">说谎原来这么可怕！给身体带来6个变化</a></li>
-<li><a href="https://github.com/ysiuba3973/djy/blob/master/gb/20/11/13/n12547643.md#1">肺像菜瓜布、呼吸力变差？2个动作提升肺功能</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ysiuba3973/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ysiuba3973/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/16/n12552984.htm">苗县教师增能工作坊 活化素养阅读教学力</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/16/n12552984.htm">苗县教师增能工作坊 活化素养阅读教学力</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ysiuba3973/djy/blob/master/gb/20/11/16/n12552984.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ysiuba3973/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ysiuba3973/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ysiuba3973/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ysiuba3973/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ysiuba3973/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/11/16/n12552984.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
